force-app/main/default/objects/SBQQ__ProcessInput__c/SBQQ__ProcessInput__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__ProcessInputHelp</customHelpPage>
    <description>Input into a quote process. Information collected by inputs can be used to drive product selection and configuration.</description>
    <label>Process Input</label>
    <nameField>
        <label>Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>