force-app/main/default/objects/SBQQ__ProcessInput__c/fields/BU__c.field-meta.xml
<CustomField>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>TCM</fullName>
                </value>
                <value>
                    <fullName>Sophis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>