force-app/main/default/objects/SBQQ__ProcessInput__c/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
        <fullName>Line_Of_Business__c</fullName>
        <label>Line Of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>CM Retail &amp; Lending</fullName>
                </value>
                <value>
                    <fullName>Core Banking</fullName>
                </value>
                <value>
                    <fullName>Corporate Banking</fullName>
                </value>
                <value>
                    <fullName>Enterprise Retail</fullName>
                </value>
                <value>
                    <fullName>Enterprise Risk</fullName>
                </value>
                <value>
                    <fullName>Global Transaction Banking</fullName>
                </value>
                <value>
                    <fullName>Lending</fullName>
                </value>
                <value>
                    <fullName>No Analysis</fullName>
                </value>
                <value>
                    <fullName>Other Products</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Shared Infrastructure &amp; Tools</fullName>
                </value>
                <value>
                    <fullName>TBS</fullName>
                </value>
                <value>
                    <fullName>TEMS</fullName>
                </value>
                <value>
                    <fullName>Treasury Capital Markets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>