force-app/main/default/objects/SBQQ__ProcessInput__c/fields/Product_Family__c.field-meta.xml
<CustomField>
        <fullName>Product_Family__c</fullName>
        <label>Product_Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Jrisk</fullName>
                </value>
                <value>
                    <fullName>KGL</fullName>
                </value>
                <value>
                    <fullName>KGR</fullName>
                </value>
                <value>
                    <fullName>Kondor</fullName>
                </value>
                <value>
                    <fullName>KP Essential</fullName>
                </value>
                <value>
                    <fullName>KTP</fullName>
                </value>
                <value>
                    <fullName>KVAR</fullName>
                </value>
                <value>
                    <fullName>Numerix</fullName>
                </value>
                <value>
                    <fullName>Pricing Partners</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>Sybase</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>TIBCO</fullName>
                </value>
                <value>
                    <fullName>TopOffice</fullName>
                </value>
                <value>
                    <fullName>ILF (B)</fullName>
                </value>
                <value>
                    <fullName>ILF (T)</fullName>
                </value>
                <value>
                    <fullName>ILF (S)</fullName>
                </value>
                <value>
                    <fullName>ILF (K)</fullName>
                </value>
                <value>
                    <fullName>RLF (B)</fullName>
                </value>
                <value>
                    <fullName>RLF (T)</fullName>
                </value>
                <value>
                    <fullName>RLF (S)</fullName>
                </value>
                <value>
                    <fullName>RLF (K)</fullName>
                </value>
                <value>
                    <fullName>PS (B)</fullName>
                </value>
                <value>
                    <fullName>PS (T)</fullName>
                </value>
                <value>
                    <fullName>PS (S)</fullName>
                </value>
                <value>
                    <fullName>PS (K)</fullName>
                </value>
                <value>
                    <fullName>FD (B)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>