force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__InputField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__InputField__c</fullName>
    <description>The API name for the field that accepts the user entry.</description>
    <inlineHelpText>Select the API name for the field that accepts the user entry.</inlineHelpText>
    <label>Input Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BinaryChoice__c</fullName>
            </value>
            <value>
                <fullName>IntegerInput__c</fullName>
            </value>
            <value>
                <fullName>Line_Of_Business__c</fullName>
            </value>
            <value>
                <fullName>Business_Area__c</fullName>
            </value>
            <value>
                <fullName>Sales_Product_Set__c</fullName>
            </value>
            <value>
                <fullName>Product_Family__c</fullName>
            </value>
            <value>
                <fullName>BU__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>