force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__QuoteProcess__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteProcess__c</fullName>
        <description>Quote process that owns the input.</description>
        <inlineHelpText>Quote process that owns the input.</inlineHelpText>
        <label>Quote Process</label>
        <referenceTo>SBQQ__QuoteProcess__c</referenceTo>
        <relationshipLabel>Process Inputs</relationshipLabel>
        <relationshipName>Inputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>